--- a/web/pom.xml
+++ b/web/pom.xml
@@ -41,6 +41,12 @@
 		    <artifactId>mybatis</artifactId>
 		    <version>3.5.10</version>
 		</dependency>
+		<!-- jackson databind -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.13.4.2</version>
+		</dependency>
 
 
   </dependencies>
