--- a/web/pom.xml
+++ b/web/pom.xml
@@ -41,11 +41,19 @@
 		    <artifactId>mybatis</artifactId>
 		    <version>3.5.10</version>
 		</dependency>
+		
 		<!-- jackson databind -->
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.13.4.2</version>
+		</dependency>
+		
+		<!-- JSON in Java -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20220320</version>
 		</dependency>
 
 
